Back-integrate changes from 2020 repo